<resources>
    <string name="app_name">띱</string>
    <string name="group_all_category">전체</string>
    <string name="group_profile_category">프로필</string>
    <string name="group_unknown_category"> </string>
    <string name="group_exit_message">정말 종료하시겠습니까?</string>
    <string name="group_refresh_cooldown_message">%d초 후에 다시 시도해주세요.</string>
    <string name="title_replacer">제목</string>
    <string name="tagged_nickname_format">%s#%s</string>
    <string name="profile_broadcast_title">공지사항</string>
    <string name="profile_block_user_title">차단한 유저</string>
    <string name="profile_user_inquiry_title">문의하기</string>
    <string name="profile_admin_inquiry_title">문의 확인</string>
    <string name="profile_logout_title">로그아웃</string>
    <string name="profile_withdraw_title">탈퇴하기</string>
    <string name="group_people_format">%d/%d</string>
    <string name="group_time_format">%s 전</string>
    <string name="tag_replacer">태그</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="login_id_hint">아이디</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="login_auto_login_title">자동 로그인</string>
    <string name="register_id_hint">아이디 (5글자 이상)</string>
    <string name="register_password_hint">비밀번호 (8글자 이상, 숫자/특수문자 포함)</string>
    <string name="nickname_hint">닉네임</string>
    <string name="tag_hint">태그</string>
    <string name="register_age_agreement_title">(필수) 만 14세 이상입니다.</string>
    <string name="register_policy_agreement_title">(필수) 개인정보 수집이용 동의</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_confirm">확인</string>
    <string name="profile_logout_message">로그아웃 하시겠습니까?</string>
    <string name="profile_withdraw_message">탈퇴 하시겠습니까?</string>
    <string name="broadcast_title">공지사항</string>
    <string name="broadcast_draft_title">공지사항 등록</string>
    <string name="broadcast_draft_button_title">등록하기</string>
    <string name="open_navigation">메뉴 열기</string>
    <string name="close_navigation">메뉴 닫기</string>
    <string name="navigation_menu_all">전체</string>
    <string name="navigation_menu_normal">일반</string>
    <string name="navigation_menu_aram">칼바람 나락</string>
    <string name="navigation_menu_duo_rank">듀오 랭크</string>
    <string name="navigation_menu_flex_rank">자유 랭크</string>
    <string name="dialog_confirm_title">확인</string>
    <string name="dialog_cancel_title">취소</string>
    <string name="navigation_menu_profile">프로필</string>
    <string name="block_user_title">차단한 유저</string>
    <string name="terms_title">서비스 이용약관</string>
    <string name="policy_title">개인정보처리방침</string>
    <string name="profile_vertical_line_title">|</string>
    <string name="detail_lane_select">원하는 라인을 선택하세요.</string>
    <string name="write_create_group_title">생성</string>
    <string name="title">제목</string>
    <string name="body">내용</string>
    <string name="title_hint">제목을 입력하세요.</string>
    <string name="body_hint">내용을 입력하세요.</string>
    <string name="write_my_lane">내 라인</string>
    <string name="write_add_lane">필요한 라인</string>
    <string name="tagged_nickname_input_dialog_title">닉네임 및 태그 변경</string>
    <string name="tagged_nickname_replacer">닉네임#태그</string>
    <string name="detail_delete_group_title">삭제</string>
    <string name="detail_body_replacer">내용</string>
    <string name="detail_select_lane_title">원하는 라인을 선택하세요.</string>
    <string name="post_menu_report_post">게시글 신고하기</string>
    <string name="post_menu_report_user">작성자 신고하기</string>
    <string name="post_menu_block_user">작성자 차단하기</string>
    <string name="post_menu_delete_post">게시글 삭제하기</string>
</resources>