<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tagged_nickname_input_dialog_title"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nicknameEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/nickname_hint"
            android:maxLength="16"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tagEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/tag_hint"
            android:maxLength="16"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/text_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_cancel_button_background"
            android:text="@string/dialog_cancel_title"
            android:textColor="@color/button_background"
            android:textSize="16sp" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_confirm_button_background"
            android:text="@string/dialog_confirm_title"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>